--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -286,6 +286,7 @@ allow 2620:18c:0:192::227;
 allow 2620:18c:0:192::228;
 allow 2620:18c:0:192::229;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
+allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:110:2990::;
@@ -678,5 +679,4 @@ allow 2a12:5940:d0e2::2;
 allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
-allow 2a12:8641:3:38::;
 allow 2a12:a800:2:1:45:138:16:203;
