--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -6,7 +6,6 @@ set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
 set_real_ip_from 103.172.134.26;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -21,7 +20,6 @@ set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.219.236.101;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -90,6 +88,7 @@ set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.5;
 set_real_ip_from 107.189.8.56;
 set_real_ip_from 107.189.8.65;
+set_real_ip_from 107.21.29.122;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -132,7 +131,6 @@ set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.41;
 set_real_ip_from 144.172.118.57;
 set_real_ip_from 144.172.73.11;
-set_real_ip_from 144.172.73.13;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 144.24.197.112;
@@ -702,6 +700,7 @@ set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
+set_real_ip_from 199.249.230.120;
 set_real_ip_from 2001:1620:51a1:0:8aae:ddff:fe61:8ccc;
 set_real_ip_from 2001:1af8:4700:a114:6::1;
 set_real_ip_from 2001:1b60:2:1:3935:104:0:1;
@@ -857,6 +856,7 @@ set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
+set_real_ip_from 212.51.128.10;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
@@ -1132,6 +1132,7 @@ set_real_ip_from 2620:18c:0:192::227;
 set_real_ip_from 2620:18c:0:192::228;
 set_real_ip_from 2620:18c:0:192::229;
 set_real_ip_from 2620:59:a000:9666:216:3eff:fe7d:dae8;
+set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
@@ -1525,7 +1526,6 @@ set_real_ip_from 2a12:5940:d0e2::2;
 set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
-set_real_ip_from 2a12:8641:3:38::;
 set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
@@ -1636,7 +1636,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1663,7 +1662,6 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 54.198.29.89;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
