--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -20,7 +20,6 @@ allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.236.100;
-allow 104.219.236.93;
 allow 104.237.158.32;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -148,6 +147,7 @@ allow 152.89.233.169;
 allow 154.16.116.61;
 allow 156.146.63.135;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.241.121.139;
 allow 162.247.72.192;
 allow 162.247.72.199;
@@ -614,6 +614,7 @@ allow 192.42.116.27;
 allow 192.46.227.185;
 allow 192.99.168.180;
 allow 193.105.134.150;
+allow 193.105.134.155;
 allow 193.163.170.149;
 allow 193.168.141.245;
 allow 193.189.100.194;
@@ -1151,6 +1152,7 @@ allow 2a02:418:6017::148;
 allow 2a02:7aa0:1619::ba45:e7f2;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
+allow 2a02:c206:2095:2624::1;
 allow 2a02:c206:2161:161::1;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
@@ -1224,6 +1226,8 @@ allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
+allow 2a04:52c0:103:234b::1;
+allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:31e6::1;
 allow 2a04:52c0:104:ad97::1;
@@ -1484,6 +1488,7 @@ allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
+allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
 allow 2a12:5940:13e2::2;
@@ -1507,8 +1512,8 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.198.71.225;
 allow 35.0.127.52;
+allow 35.169.132.155;
 allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.187.5.192;
@@ -1546,6 +1551,7 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
+allow 45.151.122.34;
 allow 45.151.167.10;
 allow 45.151.167.11;
 allow 45.151.167.12;
@@ -1618,7 +1624,9 @@ allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 5.255.100.126;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1637,7 +1645,9 @@ allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
 allow 5.255.98.151;
+allow 5.255.98.198;
 allow 5.255.98.23;
+allow 5.255.98.231;
 allow 5.255.99.108;
 allow 5.255.99.124;
 allow 5.255.99.147;
@@ -1768,6 +1778,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.210.59.57;
+allow 91.219.236.101;
 allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
