--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -20,7 +20,6 @@ set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
-set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -148,6 +147,7 @@ set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 156.146.63.135;
 set_real_ip_from 160.119.249.240;
+set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.241.121.139;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
@@ -614,6 +614,7 @@ set_real_ip_from 192.42.116.27;
 set_real_ip_from 192.46.227.185;
 set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
+set_real_ip_from 193.105.134.155;
 set_real_ip_from 193.163.170.149;
 set_real_ip_from 193.168.141.245;
 set_real_ip_from 193.189.100.194;
@@ -1151,6 +1152,7 @@ set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:7aa0:1619::ba45:e7f2;
 set_real_ip_from 2a02:898:218::1;
 set_real_ip_from 2a02:898:218::2;
+set_real_ip_from 2a02:c206:2095:2624::1;
 set_real_ip_from 2a02:c206:2161:161::1;
 set_real_ip_from 2a02:c207:3002:8283::1;
 set_real_ip_from 2a02:c207:3006:6498::1;
@@ -1224,6 +1226,8 @@ set_real_ip_from 2a03:e600:100::70;
 set_real_ip_from 2a03:e600:100::71;
 set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
+set_real_ip_from 2a04:52c0:103:234b::1;
+set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:31e6::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
@@ -1484,6 +1488,7 @@ set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:1fc0:3::4289:69b8;
 set_real_ip_from 2a10:8a40:f313::29;
+set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
 set_real_ip_from 2a12:5940:13e2::2;
@@ -1507,8 +1512,8 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.198.71.225;
 set_real_ip_from 35.0.127.52;
+set_real_ip_from 35.169.132.155;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.187.5.192;
@@ -1546,6 +1551,7 @@ set_real_ip_from 45.141.215.88;
 set_real_ip_from 45.141.215.90;
 set_real_ip_from 45.141.215.95;
 set_real_ip_from 45.141.215.97;
+set_real_ip_from 45.151.122.34;
 set_real_ip_from 45.151.167.10;
 set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
@@ -1618,7 +1624,9 @@ set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 5.255.100.126;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.190;
@@ -1637,7 +1645,9 @@ set_real_ip_from 5.255.125.41;
 set_real_ip_from 5.255.127.222;
 set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
+set_real_ip_from 5.255.98.198;
 set_real_ip_from 5.255.98.23;
+set_real_ip_from 5.255.98.231;
 set_real_ip_from 5.255.99.108;
 set_real_ip_from 5.255.99.124;
 set_real_ip_from 5.255.99.147;
@@ -1768,6 +1778,7 @@ set_real_ip_from 91.208.75.239;
 set_real_ip_from 91.208.75.3;
 set_real_ip_from 91.208.75.4;
 set_real_ip_from 91.210.59.57;
+set_real_ip_from 91.219.236.101;
 set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
