--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -638,7 +638,6 @@ allow 193.218.118.133;
 allow 193.218.118.182;
 allow 193.218.118.91;
 allow 193.233.133.109;
-allow 193.233.233.124;
 allow 193.239.232.102;
 allow 193.239.232.228;
 allow 193.239.232.230;
@@ -680,6 +679,7 @@ allow 198.98.48.33;
 allow 198.98.49.203;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.53.136;
 allow 198.98.54.49;
 allow 198.98.60.90;
@@ -847,7 +847,7 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
-allow 212.51.128.10;
+allow 212.51.128.3;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
@@ -956,6 +956,7 @@ allow 2.58.56.90;
 allow 2600:3c00:e000:4ee::1;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
+allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e5::104;
 allow 2602:fbf6:11:27::3;
@@ -991,6 +992,7 @@ allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
 allow 2605:6400:10:16e:e9da:a184:bfe1:e727;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:4ed:1:1:1:1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1471,7 +1473,6 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
-allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
@@ -1497,13 +1498,8 @@ allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
-allow 2a12:5940:13e2::2;
-allow 2a12:5940:144f::2;
 allow 2a12:5940:4462::2;
-allow 2a12:5940:52c2::2;
-allow 2a12:5940:53f7::2;
 allow 2a12:5940:7515::2;
-allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c80b::2;
@@ -1511,7 +1507,6 @@ allow 2a12:5940:c814::2;
 allow 2a12:5940:c820::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
-allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:8641:3:38::;
@@ -1519,7 +1514,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.219.101.107;
+allow 34.228.122.114;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1563,7 +1558,6 @@ allow 45.151.167.10;
 allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
-allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
 allow 45.33.15.243;
@@ -1573,6 +1567,7 @@ allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.35;
+allow 45.79.144.222;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
@@ -1626,7 +1621,6 @@ allow 51.75.64.23;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
-allow 5.182.86.212;
 allow 51.89.138.51;
 allow 51.89.153.112;
 allow 5.196.8.113;
@@ -1690,7 +1684,6 @@ allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.208.106.128;
 allow 74.82.47.194;
-allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.243;
 allow 77.232.143.248;
@@ -1704,7 +1697,6 @@ allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
-allow 79.137.195.103;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1728,7 +1720,7 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 83.97.79.150;
-allow 84.131.60.81;
+allow 84.131.55.180;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.225.54;
@@ -1766,7 +1758,6 @@ allow 89.147.110.154;
 allow 89.147.110.214;
 allow 89.147.111.124;
 allow 89.163.155.136;
-allow 89.185.85.140;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
@@ -1820,7 +1811,6 @@ allow 94.177.106.46;
 allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
-allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
