--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -638,7 +638,6 @@ set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.233.133.109;
-set_real_ip_from 193.233.233.124;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.228;
 set_real_ip_from 193.239.232.230;
@@ -680,6 +679,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.53.136;
 set_real_ip_from 198.98.54.49;
 set_real_ip_from 198.98.60.90;
@@ -847,7 +847,7 @@ set_real_ip_from 209.141.55.26;
 set_real_ip_from 209.141.59.116;
 set_real_ip_from 209.141.62.71;
 set_real_ip_from 212.21.66.6;
-set_real_ip_from 212.51.128.10;
+set_real_ip_from 212.51.128.3;
 set_real_ip_from 212.69.167.80;
 set_real_ip_from 212.73.134.204;
 set_real_ip_from 212.95.50.77;
@@ -956,6 +956,7 @@ set_real_ip_from 2.58.56.90;
 set_real_ip_from 2600:3c00:e000:4ee::1;
 set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::2;
+set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:fbf6:11:27::3;
@@ -991,6 +992,7 @@ set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
 set_real_ip_from 2605:6400:10:16e:e9da:a184:bfe1:e727;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:4ed:1:1:1:1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1471,7 +1473,6 @@ set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
 set_real_ip_from 2a0e:97c0:470::30;
-set_real_ip_from 2a0e:d602:1:14bc::2;
 set_real_ip_from 2a0e:d602:2:2a2::2;
 set_real_ip_from 2a0e:d602:2:55f::2;
 set_real_ip_from 2a0e:e701:1198::1;
@@ -1497,13 +1498,8 @@ set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 set_real_ip_from 2a12:1e01::2;
-set_real_ip_from 2a12:5940:13e2::2;
-set_real_ip_from 2a12:5940:144f::2;
 set_real_ip_from 2a12:5940:4462::2;
-set_real_ip_from 2a12:5940:52c2::2;
-set_real_ip_from 2a12:5940:53f7::2;
 set_real_ip_from 2a12:5940:7515::2;
-set_real_ip_from 2a12:5940:9101::2;
 set_real_ip_from 2a12:5940:b4db::2;
 set_real_ip_from 2a12:5940:b4dd::2;
 set_real_ip_from 2a12:5940:c80b::2;
@@ -1511,7 +1507,6 @@ set_real_ip_from 2a12:5940:c814::2;
 set_real_ip_from 2a12:5940:c820::2;
 set_real_ip_from 2a12:5940:c826::2;
 set_real_ip_from 2a12:5940:d0e2::2;
-set_real_ip_from 2a12:5940:f0a8::2;
 set_real_ip_from 2a12:8641:3:12::;
 set_real_ip_from 2a12:8641:3:24::;
 set_real_ip_from 2a12:8641:3:38::;
@@ -1519,7 +1514,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 3.219.101.107;
+set_real_ip_from 34.228.122.114;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
@@ -1563,7 +1558,6 @@ set_real_ip_from 45.151.167.10;
 set_real_ip_from 45.151.167.11;
 set_real_ip_from 45.151.167.12;
 set_real_ip_from 45.151.167.13;
-set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.15.158.165;
 set_real_ip_from 45.15.158.39;
 set_real_ip_from 45.33.15.243;
@@ -1573,6 +1567,7 @@ set_real_ip_from 45.66.35.10;
 set_real_ip_from 45.66.35.20;
 set_real_ip_from 45.66.35.21;
 set_real_ip_from 45.66.35.35;
+set_real_ip_from 45.79.144.222;
 set_real_ip_from 45.79.177.21;
 set_real_ip_from 45.79.50.161;
 set_real_ip_from 45.80.158.205;
@@ -1626,7 +1621,6 @@ set_real_ip_from 51.75.64.23;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
-set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.138.51;
 set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.8.113;
@@ -1690,7 +1684,6 @@ set_real_ip_from 72.167.47.69;
 set_real_ip_from 74.207.248.172;
 set_real_ip_from 74.208.106.128;
 set_real_ip_from 74.82.47.194;
-set_real_ip_from 77.105.146.42;
 set_real_ip_from 77.220.196.253;
 set_real_ip_from 77.232.143.243;
 set_real_ip_from 77.232.143.248;
@@ -1704,7 +1697,6 @@ set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
-set_real_ip_from 79.137.195.103;
 set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
@@ -1728,7 +1720,7 @@ set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 83.97.79.150;
-set_real_ip_from 84.131.60.81;
+set_real_ip_from 84.131.55.180;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
@@ -1766,7 +1758,6 @@ set_real_ip_from 89.147.110.154;
 set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.163.155.136;
-set_real_ip_from 89.185.85.140;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
@@ -1820,7 +1811,6 @@ set_real_ip_from 94.177.106.46;
 set_real_ip_from 94.177.106.55;
 set_real_ip_from 94.177.106.59;
 set_real_ip_from 94.228.163.25;
-set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
 set_real_ip_from 94.32.66.15;
