--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -6,7 +6,6 @@ allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
 allow 103.172.134.26;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -44,6 +43,7 @@ allow 104.244.79.61;
 allow 107.172.13.143;
 allow 107.172.31.146;
 allow 107.172.31.165;
+allow 107.173.179.59;
 allow 107.174.138.172;
 allow 107.174.231.197;
 allow 107.189.10.141;
@@ -638,6 +638,7 @@ allow 193.218.118.133;
 allow 193.218.118.182;
 allow 193.218.118.91;
 allow 193.233.133.109;
+allow 193.233.233.124;
 allow 193.239.232.102;
 allow 193.239.232.228;
 allow 193.239.232.230;
@@ -847,7 +848,6 @@ allow 209.141.55.26;
 allow 209.141.59.116;
 allow 209.141.62.71;
 allow 212.21.66.6;
-allow 212.51.128.3;
 allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
@@ -1150,7 +1150,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
-allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 allow 2a02:13f0:8100:6:386:2b8f:b0fd:1;
 allow 2a02:13f0:8100:6:6bc:499d:b353:1;
 allow 2a02:16d0:0:5::1;
@@ -1473,6 +1472,7 @@ allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:97c0:470::30;
+allow 2a0e:d602:1:14bc::2;
 allow 2a0e:d602:2:2a2::2;
 allow 2a0e:d602:2:55f::2;
 allow 2a0e:e701:1198::1;
@@ -1493,13 +1493,17 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
-allow 2a10:1fc0:3::4289:69b8;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 allow 2a12:1e01::2;
+allow 2a12:5940:13e2::2;
 allow 2a12:5940:4462::2;
+allow 2a12:5940:463b::2;
+allow 2a12:5940:52c2::2;
+allow 2a12:5940:53f7::2;
 allow 2a12:5940:7515::2;
+allow 2a12:5940:9101::2;
 allow 2a12:5940:b4db::2;
 allow 2a12:5940:b4dd::2;
 allow 2a12:5940:c80b::2;
@@ -1507,6 +1511,7 @@ allow 2a12:5940:c814::2;
 allow 2a12:5940:c820::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
+allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:8641:3:38::;
@@ -1514,7 +1519,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 34.228.122.114;
+allow 34.231.80.171;
 allow 35.0.127.52;
 allow 37.120.166.23;
 allow 37.120.188.156;
@@ -1558,6 +1563,7 @@ allow 45.151.167.10;
 allow 45.151.167.11;
 allow 45.151.167.12;
 allow 45.151.167.13;
+allow 45.15.157.177;
 allow 45.15.158.165;
 allow 45.15.158.39;
 allow 45.33.15.243;
@@ -1600,6 +1606,7 @@ allow 46.183.219.145;
 allow 46.183.222.188;
 allow 46.183.222.189;
 allow 46.183.222.190;
+allow 46.226.161.151;
 allow 46.226.164.14;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1684,10 +1691,12 @@ allow 72.167.47.69;
 allow 74.207.248.172;
 allow 74.208.106.128;
 allow 74.82.47.194;
+allow 77.105.146.42;
 allow 77.220.196.253;
 allow 77.232.143.243;
 allow 77.232.143.248;
 allow 77.232.143.255;
+allow 77.48.28.193;
 allow 77.48.28.204;
 allow 77.48.28.236;
 allow 77.48.28.239;
@@ -1697,6 +1706,7 @@ allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
+allow 79.137.195.103;
 allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
@@ -1719,7 +1729,6 @@ allow 82.68.49.227;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
-allow 83.97.79.150;
 allow 84.131.55.180;
 allow 84.16.224.227;
 allow 84.19.182.20;
@@ -1732,7 +1741,6 @@ allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.204.116.139;
-allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.209.176.103;
 allow 85.215.76.62;
@@ -1758,6 +1766,7 @@ allow 89.147.110.154;
 allow 89.147.110.214;
 allow 89.147.111.124;
 allow 89.163.155.136;
+allow 89.185.85.140;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.58.18.210;
@@ -1811,12 +1820,12 @@ allow 94.177.106.46;
 allow 94.177.106.55;
 allow 94.177.106.59;
 allow 94.228.163.25;
+allow 94.228.169.70;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.32.66.15;
 allow 95.111.238.0;
 allow 95.128.43.164;
-allow 95.141.35.21;
 allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.164.46.204;
