--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -318,7 +318,6 @@ deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e00::f03c:93ff:fef8:bd9b;
 deny 2a01:7e01::f03c:93ff:fef8:bd60;
-deny 2a02:13f0:8100:6:205:ce4a:e2d2:1;
 deny 2a02:13f0:8100:6:386:2b8f:b0fd:1;
 deny 2a02:13f0:8100:6:6bc:499d:b353:1;
 deny 2a02:16d0:0:5::1;
@@ -641,6 +640,7 @@ deny 2a0c:e300::23;
 deny 2a0d:3e83:1:b284::1;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:97c0:470::30;
+deny 2a0e:d602:1:14bc::2;
 deny 2a0e:d602:2:2a2::2;
 deny 2a0e:d602:2:55f::2;
 deny 2a0e:e701:1198::1;
@@ -661,13 +661,17 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
-deny 2a10:1fc0:3::4289:69b8;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
 deny 2a12:1e01::2;
+deny 2a12:5940:13e2::2;
 deny 2a12:5940:4462::2;
+deny 2a12:5940:463b::2;
+deny 2a12:5940:52c2::2;
+deny 2a12:5940:53f7::2;
 deny 2a12:5940:7515::2;
+deny 2a12:5940:9101::2;
 deny 2a12:5940:b4db::2;
 deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c80b::2;
@@ -675,6 +679,7 @@ deny 2a12:5940:c814::2;
 deny 2a12:5940:c820::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:d0e2::2;
+deny 2a12:5940:f0a8::2;
 deny 2a12:8641:3:12::;
 deny 2a12:8641:3:24::;
 deny 2a12:8641:3:38::;
