--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -1,3 +1,4 @@
+set_real_ip_from 100.25.57.131;
 set_real_ip_from 102.130.113.9;
 set_real_ip_from 102.130.127.117;
 set_real_ip_from 103.106.3.94;
@@ -21,6 +22,7 @@ set_real_ip_from 104.167.242.118;
 set_real_ip_from 104.192.1.138;
 set_real_ip_from 104.192.3.74;
 set_real_ip_from 104.219.236.100;
+set_real_ip_from 104.219.236.93;
 set_real_ip_from 104.237.158.32;
 set_real_ip_from 104.244.72.115;
 set_real_ip_from 104.244.72.132;
@@ -151,7 +153,6 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
 set_real_ip_from 160.119.249.240;
-set_real_ip_from 161.35.129.51;
 set_real_ip_from 162.241.121.139;
 set_real_ip_from 162.247.72.192;
 set_real_ip_from 162.247.72.199;
@@ -185,6 +186,7 @@ set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.232.161.206;
 set_real_ip_from 172.81.131.139;
+set_real_ip_from 172.81.131.156;
 set_real_ip_from 172.81.131.168;
 set_real_ip_from 172.81.131.84;
 set_real_ip_from 173.232.195.137;
@@ -215,7 +217,7 @@ set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.31.138.37;
+set_real_ip_from 178.31.20.230;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
@@ -833,6 +835,7 @@ set_real_ip_from 204.85.191.8;
 set_real_ip_from 204.85.191.9;
 set_real_ip_from 205.185.113.180;
 set_real_ip_from 205.185.116.34;
+set_real_ip_from 205.185.117.149;
 set_real_ip_from 205.185.119.35;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
@@ -1009,6 +1012,7 @@ set_real_ip_from 2605:6400:20:104e::2;
 set_real_ip_from 2605:6400:20:170c::1;
 set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
+set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
 set_real_ip_from 2605:6400:20:be7::1;
 set_real_ip_from 2605:6400:20:ff9::1;
@@ -1204,6 +1208,7 @@ set_real_ip_from 2a03:94e0:24d4::4;
 set_real_ip_from 2a03:94e0:24d4::5;
 set_real_ip_from 2a03:94e0:24d4::6;
 set_real_ip_from 2a03:94e0:24d4::7;
+set_real_ip_from 2a03:94e0:24d4::8;
 set_real_ip_from 2a03:94e0:24d4::9;
 set_real_ip_from 2a03:94e0:2660:4819:623:8331:4852:1;
 set_real_ip_from 2a03:94e0:ffff:185:181:61:0:115;
@@ -1519,7 +1524,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.225.15.245;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1567,7 +1571,6 @@ set_real_ip_from 45.151.167.13;
 set_real_ip_from 45.15.157.177;
 set_real_ip_from 45.15.158.165;
 set_real_ip_from 45.15.158.39;
-set_real_ip_from 45.33.15.243;
 set_real_ip_from 45.56.81.190;
 set_real_ip_from 45.61.185.172;
 set_real_ip_from 45.66.35.10;
@@ -1767,6 +1770,7 @@ set_real_ip_from 89.147.110.214;
 set_real_ip_from 89.147.111.124;
 set_real_ip_from 89.163.155.136;
 set_real_ip_from 89.185.85.140;
+set_real_ip_from 89.187.143.31;
 set_real_ip_from 89.234.157.254;
 set_real_ip_from 89.236.112.100;
 set_real_ip_from 89.58.18.210;
